tests/ui/deprecations.stderr
error: use of deprecated constant `pyo3::impl_::deprecations::NAME_ATTRIBUTE`: use `#[pyo3(name = "...")]` instead of `#[name = "..."]`
  --> $DIR/deprecations.rs:13:5
   |
13 |     #[name = "num"]
   |     ^
   |
note: the lint level is defined here
  --> $DIR/deprecations.rs:1:9
   |
1  | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: use of deprecated constant `pyo3::impl_::deprecations::NAME_ATTRIBUTE`: use `#[pyo3(name = "...")]` instead of `#[name = "..."]`
  --> $DIR/deprecations.rs:16:5
   |
16 |     #[name = "num"]
   |     ^

error: use of deprecated constant `pyo3::impl_::deprecations::NAME_ATTRIBUTE`: use `#[pyo3(name = "...")]` instead of `#[name = "..."]`
  --> $DIR/deprecations.rs:20:5
   |
20 |     #[name = "custom_static"]
   |     ^

error: use of deprecated constant `pyo3::impl_::deprecations::NAME_ATTRIBUTE`: use `#[pyo3(name = "...")]` instead of `#[name = "..."]`
  --> $DIR/deprecations.rs:25:1
   |
25 | #[name = "foo"]
   | ^
